fixed bottom footer overlap

--- a/pages/styles/include/common.css
+++ b/pages/styles/include/common.css
@@ -250,9 +250,9 @@ p {
 }
 
 footer {
-	position: fixed;
+	position: relative;
 	background-color: white;
-	bottom: 0px;
+	bottom: -20px;
 	width: 100%;
 	height: 55px;
 	font-size: 12px;
